Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22449

Creator crashes on macOS10.14

XMLWordPrintable

    • 23a71e85bf85e701970ed96a75f00419342047d8 (qt-creator/qt-creator/master)

      Install Creator 4.10.0 beta1 (online installer and staging repository used in test), try to launch. A dialog with a lot of text appears and goes away so fast that the text can not be read, it had text something about last time Creator was started and problems. And then Creator crashes. See attached output.

        For Gerrit Dashboard: QTCREATORBUG-22449
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes