Ios: Fix typo in device factory creation

Introduced in 0c2101d816, but only started to cause problems since
555360c1d4.

Fixes: QTCREATORBUG-22449
Change-Id: Id531d7cb94c80b762f7981cf3414348080d0d613
Reviewed-by: Eike Ziller <eike.ziller@qt.io>